# localRAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp-config.json  pyproject.toml
docs/: mcp-setup.md
docs/plans/: 2026-02-14-notion-loader-design.md  2026-02-14-notion-loader-impl.md
nginx/: nginx.conf
src/rag/: mcp_server.py
src/rag/api/: main.py
src/rag/api/routes/: __init__.py  chat.py  documents.py  system.py
src/rag/cli/: commands.py
src/rag/core/: __init__.py  chunker.py  config.py  engine.py  exceptions.py  retriever.py
src/rag/embeddings/: __init__.py  glm_embedding.py
src/rag/llm/: __init__.py  glm_client.py
src/rag/loaders/: __init__.py  base.py  code_loader.py  file_loader.py  notion_loader.py  web_loader.py
src/rag/memory/: __init__.py  conversation.py
src/rag/storage/: __init__.py  chroma_store.py
tests/e2e/: test_api.py
tests/integration/: test_rag_flow.py
tests/loaders/: test_notion_loader.py
tests/unit/: test_chunker.py
